# DeepFileX

./: .editorconfig  .gitignore  CHANGELOG.md  COUPANG_BANNER_IMPLEMENTATION.md  FileMRI_Installer.iss  FileMRI_Phase11_Fixed.spec  LICENSE  LICENSE.txt  README.md  REBRANDING_COMPLETE.md  RELEASE_NOTES_v1.4.0.md  UPDATE_DIALOG_IMPROVEMENT_REPORT.md  adsterra_banner.html  build_v1.4.0.bat  filemri.py  filemri_guide_v4.md  filemri_smartlinks.py  pyproject.toml  quick_deploy.bat  requirements.txt  run_filemri.bat  smartlinks_web_banner.py  update_checker.py  version_config.py  version_info.py
.claude/: ralph-loop.local.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Release_v1.0/: LICENSE.txt  README.md  requirements.txt
Report/: DeepFileX Report.md  FINAL_CLEANUP_REPORT.md  RALPH_LOOP_COMPLETION.md
archive/: FINAL_COMPLETION_REPORT.md
assets/: test_webview2.py
assets/ads/: coupang_iframe.html  coupang_partners_banner.html
dev/: README.md
dev/v1.4.1/: run_deepfilex.bat
dev/v1.5.0/: DeepFileX.bat  INDEXING_IMPROVEMENT_PLAN.md  check_ad_settings.py  index_merger.py  index_updater.py  quick_deploy.bat  run_deepfilex.bat  system_check.bat
docs/: CONTRIBUTING.md  GITHUB_PAGES_AD_SYSTEM.md  Pub_Codes_2891475_1770551402.txt  README.md  ROADMAP.md  TEST_REPORT.md  V1.4.0_DEVELOPMENT_SUMMARY.md  system_requirements.md  쿠팡 광고 배너 태그.txt
docs/ads/: README.md  index.html
docs/archive/: removed_files_log.txt
docs/development/: COUPANG_BANNER_IMPLEMENTATION.md  RALPH_LOOP_SUMMARY.md
docs/releases/: RELEASE_DESCRIPTION.txt  RELEASE_DESCRIPTION_v1.4.1.txt  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.0_SHORT.md  RELEASE_NOTES_v1.4.1.md  RELEASE_NOTES_v1.4.1_SHORT.md  RELEASE_TEMPLATE.md
docs/reports/: BATCH_FILES_REBRANDING.md  PROJECT_HISTORY.md  SMARTLINKS_CLEANUP_REPORT.md
docs/reports/archive_2026-02/: FIXES_SUMMARY.md  ISSUES_LOG.md  README.md
docs/summaries/: V1.4.1_DEVELOPMENT_SUMMARY.md  V1.4.1_POST_RELEASE_MAINTENANCE.md
scripts/: DeepFileX.bat  quick_deploy.bat  run_deepfilex.bat
scripts/legacy/: FileMRI.bat
src/: cef_ad_widget.py  deepfilex.py  filemri.py  filemri_smartlinks.py  github_pages_ad_widget.py  index_comparator.py  index_filename_generator.py  pywebview_ad_widget.py  reset_update_check.py  rotating_image_banner.py  simple_ad_widget.py  update_checker.py  version_config.py  webview2_ad_widget.py
tests/: README.md  test_ad_banner.py  test_webengine.py
website/: legacy.html
