[project]
name = "deepfilex"
version = "1.4.1"
description = "DeepFileX - Advanced File Analysis System"
authors = [
    {name = "QuantumLayer", email = "contact@quantumlayer.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["file-search", "file-analysis", "desktop-app", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Desktop Environment :: File Managers",
]

dependencies = [
    "PyQt6>=6.4.0",
    "chardet>=5.0.0",
    "requests>=2.28.0",
    "pywebview>=6.1",
    "bottle>=0.13.4",
    "pythonnet>=3.0.5",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0",
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.990",
]
docs = [
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
]

[project.urls]
Homepage = "https://github.com/noblejim/DeepFileX"
Documentation = "https://github.com/noblejim/DeepFileX#readme"
Repository = "https://github.com/noblejim/DeepFileX"
"Bug Tracker" = "https://github.com/noblejim/DeepFileX/issues"
Changelog = "https://github.com/noblejim/DeepFileX/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | releases
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyinstaller]
name = "DeepFileX"
entry_points = ["src/deepfilex.py"]
icon = "assets/icon.ico"
onefile = true
windowed = true
